--- a/style.css
+++ b/style.css
@@ -80,6 +80,16 @@ button:active{
     font-size: 1.5rem;
 }
 
+/* loader */
+.loader{
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #333;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
 @media screen and (max-width: 1000px){
     .quote-container{
         margin: auto 10px;
